@@ -1,3 +1,6 @@
+06Dec21=======================================================================
+1. Fix show/register to allow query of individual calls as well as get a 
+   complete list.
 15Jul21=======================================================================
 1. Fix long standing bug in crontabs that commands with " rather than ' around
    strings could cause those commands not to work. 
